--- a/nama/Kalman_by_kiran.ipynb
+++ b/nama/Kalman_by_kiran.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "c1a31bad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "efbef37b",
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "04712947",
    "metadata": {},
    "outputs": [
     {
@@ -93,6 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "26fcd2ba",
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "71bfc132",
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
+   "id": "1c013887",
    "metadata": {
     "scrolled": true
    },
@@ -301,6 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d6139744",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -308,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
