--- a/Project Resume 09122021/emotion video/Emotion detection by kiran/Emotion-detection-main/Emotion_Detection.ipynb
+++ b/Project Resume 09122021/emotion video/Emotion detection by kiran/Emotion-detection-main/Emotion_Detection.ipynb
@@ -543,13 +543,7 @@
       "10/10 [==============================] - 28s 3s/step - loss: 0.0024 - accuracy: 0.9994 - val_loss: 1.8297e-04 - val_accuracy: 1.0000\n",
       "\n",
       "Epoch 00040: val_loss did not improve from 0.00006\n",
-      "Epoch 41/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 41/100\n",
       "10/10 [==============================] - 26s 3s/step - loss: 0.0021 - accuracy: 1.0000 - val_loss: 0.0026 - val_accuracy: 1.0000\n",
       "\n",
       "Epoch 00041: val_loss did not improve from 0.00006\n",
@@ -1012,7 +1006,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1026,7 +1020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
