--- a/Project POMO/data scraping/modify model test 2.ipynb
+++ b/Project POMO/data scraping/modify model test 2.ipynb
@@ -530,7 +530,7 @@
     "        'Fusarium Wilt', 'Fruit Borer / Blight Blora']]\n",
     "\n",
     "# X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size = 0.3, random_state = 42)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size = 0.3, random_state = 101)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size = 0.3, random_state = 1)"
    ]
   },
   {
@@ -584,6 +584,50 @@
       "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
       "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "D:\\test\\Basic_Python\\Project POMO\\data scraping\\POMO_classifier.py:156: RuntimeWarning: divide by zero encountered in floor_divide\n",
+      "  y_pred_new = np.nan_to_num(and_of_pred // or_of_pred)\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     },
@@ -592,23 +636,67 @@
      "output_type": "stream",
      "text": [
       "Classification Report on Training dataset : \n",
-      "Accuracy_score: 99.12 %\n",
-      "Loss: 0.88 %\n",
-      "Hamming_loss: 0.19 %\n"
+      "Accuracy_score: 93.81 %\n",
+      "Loss: 6.19 %\n",
+      "Zero_one_loss: 6.19 %\n",
+      "Hamming_loss: 1.35 %\n",
+      "ML_confusion_matrix:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.92      0.94       824\n",
+      "           1       0.94      0.88      0.91       464\n",
+      "           2       1.00      0.99      0.99       329\n",
+      "           3       1.00      0.90      0.95        73\n",
+      "           4       1.00      0.99      1.00       544\n",
+      "\n",
+      "   micro avg       0.97      0.94      0.95      2234\n",
+      "   macro avg       0.98      0.94      0.96      2234\n",
+      "weighted avg       0.97      0.94      0.95      2234\n",
+      " samples avg       0.41      0.40      0.40      2234\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\test\\Basic_Python\\Project POMO\\data scraping\\POMO_classifier.py:132: RuntimeWarning: divide by zero encountered in floor_divide\n",
-      "  y_pred_new = np.nan_to_num(and_of_pred // or_of_pred)\n"
+      "D:\\test\\Basic_Python\\Project POMO\\data scraping\\POMO_classifier.py:156: RuntimeWarning: divide by zero encountered in floor_divide\n",
+      "  y_pred_new = np.nan_to_num(and_of_pred // or_of_pred)\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report on Testing dataset : \n",
+      "Accuracy_score: 99.76 %\n",
+      "Loss: 0.24 %\n",
+      "Zero_one_loss: 0.24 %\n",
+      "Hamming_loss: 0.05 %\n",
+      "ML_confusion_matrix:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       350\n",
+      "           1       1.00      0.99      1.00       212\n",
+      "           2       1.00      1.00      1.00       135\n",
+      "           3       1.00      1.00      1.00        30\n",
+      "           4       1.00      1.00      1.00       243\n",
+      "\n",
+      "   micro avg       1.00      1.00      1.00       970\n",
+      "   macro avg       1.00      1.00      1.00       970\n",
+      "weighted avg       1.00      1.00      1.00       970\n",
+      " samples avg       0.43      0.43      0.43       970\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'RESULT_FILE_PATH': 'D:\\\\test\\\\Basic_Python\\\\Project POMO\\\\data scraping\\\\Artifact\\\\2022-07-03-17-49-50\\\\Docs\\\\MultiLabelModel_result.csv'}"
+       "{'RESULT_FILE_PATH': 'D:\\\\test\\\\Basic_Python\\\\Project POMO\\\\data scraping\\\\Artifact\\\\2022-07-05-01-58-05\\\\Docs\\\\MultiLabelModel_result.csv'}"
       ]
      },
      "execution_count": 8,
@@ -617,7 +705,7 @@
     }
    ],
    "source": [
-    "fit_ensemble_voting_classifier(X_train, y_train, classifiers)"
+    "fit_ensemble_voting_classifier((X_train, y_train), (X_test, y_test), classifiers)"
    ]
   },
   {
@@ -629,7 +717,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\test\\Basic_Python\\Project POMO\\data scraping\\POMO_classifier.py:132: RuntimeWarning: divide by zero encountered in floor_divide\n",
+      "D:\\test\\Basic_Python\\Project POMO\\data scraping\\POMO_classifier.py:156: RuntimeWarning: divide by zero encountered in floor_divide\n",
       "  y_pred_new = np.nan_to_num(and_of_pred // or_of_pred)\n"
      ]
     },
@@ -641,8 +729,8 @@
        "       [0, 0, 0, 0, 0],\n",
        "       ...,\n",
        "       [0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0],\n",
-       "       [1, 0, 1, 0, 1]], dtype=int64)"
+       "       [0, 0, 1, 0, 1],\n",
+       "       [0, 0, 1, 0, 1]], dtype=int64)"
       ]
      },
      "execution_count": 9,
@@ -685,115 +773,46 @@
      "output_type": "stream",
      "text": [
       "Classification Report : \n",
-      "Accuracy_score: 94.56 %\n",
-      "Loss: 5.44 %\n",
-      "Hamming_loss: 1.12 %\n"
+      "Accuracy_score: 99.76 %\n",
+      "Loss: 0.24 %\n",
+      "Zero_one_loss: 0.24 %\n",
+      "Hamming_loss: 0.05 %\n",
+      "ML_confusion_matrix:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       350\n",
+      "           1       1.00      0.99      1.00       212\n",
+      "           2       1.00      1.00      1.00       135\n",
+      "           3       1.00      1.00      1.00        30\n",
+      "           4       1.00      1.00      1.00       243\n",
+      "\n",
+      "   micro avg       1.00      1.00      1.00       970\n",
+      "   macro avg       1.00      1.00      1.00       970\n",
+      "weighted avg       1.00      1.00      1.00       970\n",
+      " samples avg       0.43      0.43      0.43       970\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\munge\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
    "source": [
-    "Accuracy_score, Loss, Hamming_loss = classification_report_ensemble_voting_classifier(y_test, y_pred)\n",
+    "Accuracy_score, Loss, Zero_one_loss, Hamming_loss, ML_confusion_matrix = classification_report_ensemble_voting_classifier(y_test, y_pred)\n",
     "\n",
     "print(\"Classification Report : \")\n",
     "print(\"Accuracy_score:\", Accuracy_score,'%')\n",
     "print(\"Loss:\", Loss,'%')\n",
-    "print(\"Hamming_loss:\", Hamming_loss,'%')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0 & 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0 | 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 1, 0, 1, 0)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0, 1, 0, 1, 0\n",
-    "0, 1, 1, 1, 0\n",
-    "0, 1, 0, 1, 1\n",
-    "\n",
-    "0, 1, 0, 1, 0\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1, 2, 3\n",
-    "1\n",
-    "2\n",
-    "1\n",
-    "\n",
-    "1\n"
+    "print(\"Zero_one_loss:\", Zero_one_loss,'%')\n",
+    "print(\"Hamming_loss:\", Hamming_loss,'%')\n",
+    "print(\"ML_confusion_matrix:\\n\", ML_confusion_matrix)"
    ]
   },
   {
