--- a/Project POMO/data scraping/03 Model Building.ipynb
+++ b/Project POMO/data scraping/03 Model Building.ipynb
@@ -5562,7 +5562,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5576,7 +5576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
