--- a/Notes/Challenges.ipynb
+++ b/Notes/Challenges.ipynb
@@ -42,11 +42,20 @@
    "source": [
     "# https://amankharwal.medium.com/130-python-projects-with-source-code-61f498591bb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://amankharwal.medium.com/130-python-projects-with-source-code-61f498591bb"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -61,6 +70,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d9c9f810be48f5a6d36a39dedf5b599964b855af479ef5af15b81f905ca17cb6"
+   }
   }
  },
  "nbformat": 4,
